# Business-Brief-AI

./: .gitignore  .replit  README.md  pnpm-lock.yaml  pyproject.toml  replit.md
.agents/memory/: MEMORY.md  fireworks-reasoning-empty-content.md  pulseboard-env.md  pulseboard-replit-integration.md  tailwind-v3-apply-opacity.md
artifacts/pulseboard/: index.html  package.json
artifacts/pulseboard/.replit-artifact/: artifact.toml
attached_assets/: Pasted-Complete-premium-UI-redesign-Make-PulseBoard-look-like-_1783707123988.txt  Pasted-Final-fixes-before-hackathon-submission-Do-all-of-these_1783715024152.txt  Pasted-Fix-only-the-current-JSON-parsing-failure-in-PulseBoard_1783713633081.txt  Pasted-Now-fill-in-the-backend-logic-completely-Here-s-what-ea_1783495254701.txt  Pasted-Now-implement-the-complete-React-frontend-Dark-theme-pr_1783706058787.txt  Pasted-Replace-ALL-frontend-files-with-premium-production-read_1783706547075.txt  Pasted-You-are-the-lead-engineer-and-product-designer-for-Puls_1783712648497.txt  sample_crisis_data_1783754591841.json
pulseboard/: .dockerignore  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.yml
pulseboard/backend/: .env.example  main.py  requirements.txt
pulseboard/backend/agents/: __init__.py  behavior_agent.py  error_agent.py  impact_agent.py  revenue_agent.py  sentiment_agent.py  synthesis_agent.py
pulseboard/backend/api/: __init__.py  routes.py
pulseboard/frontend/: index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.js
sample-data/: demo-business.csv
(+27 files in other folders)
