[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "asyncpg==0.29.0",
    "fastapi==0.111.0",
    "httpx==0.27.0",
    "pandas==2.2.2",
    "pydantic==2.7.4",
    "python-dotenv==1.0.1",
    "python-multipart==0.0.9",
    "sqlalchemy==2.0.31",
    "uvicorn==0.30.1",
]
